--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         function init() {
             stage = new createjs.Stage("myCanvas");
             image = new Image();
-            image.src = "imagePath2.png";
+            image.src = "https://github.com/DmlZ/Ant/blob/master/imagePath2.png";
             bitmap = new createjs.Bitmap(image);
             stage.addChild(bitmap);
             stage.update();
@@ -40,7 +40,7 @@
         // функция запуска второй анимации
         var startSecondAnimation = function init() {
             image = new Image();
-            image.src = "imagePath1.png";
+            image.src = "https://github.com/DmlZ/Ant/blob/master/imagePath1.png";
             bitmap = new createjs.Bitmap(image);
             stage.addChild(bitmap);
             stage.update();
@@ -57,7 +57,7 @@
         var x=10;
         var startFAnimation = function init() {
             image = new Image();
-            image.src = "imagePath10.png";
+            image.src = "https://github.com/DmlZ/Ant/blob/master/imagePath10.png";
             bitmap = new createjs.Bitmap(image);
             stage.addChild(bitmap);
             stage.update();
@@ -69,7 +69,7 @@
 
         function initad() {
             image = new Image();
-            image.src = "imagePath10.png";
+            image.src = "https://github.com/DmlZ/Ant/blob/master/imagePath10.png";
             bitmap = new createjs.Bitmap(image);
             stage.addChild(bitmap);
             stage.update();
